# HaskellProjectGenerator

./: .gitignore  HaskellProjectGenerator.cabal  README.md  cabal.project  stack.yaml
app/: Input.hs  Main.hs  Template.hs
app/Template/: Internal.hs  Static.hs
