cabal-version: 2.2

name:           HaskellProjectGenerator
version:        1.0.0.0
description:    Please see the README on GitHub at <https://github.com/t-sasaki915/HaskellProjectGenerator#readme>
homepage:       https://github.com/t-sasaki915/HaskellProjectGenerator#readme
bug-reports:    https://github.com/t-sasaki915/HaskellProjectGenerator/issues
author:         Toma Sasaki
maintainer:     netst915@gmail.com
copyright:      2025 Toma Sasaki
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/t-sasaki915/HaskellProjectGenerator

executable HaskellProjectGenerator
  main-is: Main.hs
  other-modules:
      Paths_HaskellProjectGenerator
  autogen-modules:
      Paths_HaskellProjectGenerator
  hs-source-dirs:
      app
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , text ==2.1.2
    , haskeline ==0.8.2.1
    , here ==1.2.14
    , extra ==1.8
  default-language: Haskell2010
  default-extensions: OverloadedStrings, LambdaCase, QuasiQuotes
