cabal-version: 2.2

name:           HaskellProjectGenerator
version:        1.0.0.0
description:    Please see the README on GitHub at <https://github.com/t-sasaki915/HaskellProjectGenerator#readme>
homepage:       https://github.com/t-sasaki915/HaskellProjectGenerator#readme
bug-reports:    https://github.com/t-sasaki915/HaskellProjectGenerator/issues
author:         Toma Sasaki
maintainer:     netst915@gmail.com
copyright:      2025 Toma Sasaki
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    static/.gitignore
    static/.hlint.yaml
    static/.stylish-haskell.yaml
    static/Lib.hs
    static/Main.hs
    static/Setup.hs
    static/Spec.hs

source-repository head
  type: git
  location: https://github.com/t-sasaki915/HaskellProjectGenerator

executable HaskellProjectGenerator
  main-is: Main.hs
  other-modules:
      Paths_HaskellProjectGenerator
      Template.Internal
      Template.Static
      Input
      Template
  autogen-modules:
      Paths_HaskellProjectGenerator
  hs-source-dirs:
      app
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , text ==2.1.2
    , ConsoleAsk ==0.1.0.1
    , time ==1.14
    , heredocs ==0.2.1.1
    , filepath ==1.5.4.0
    , file-embed ==0.0.16.0
    , directory ==1.3.9.0
    , bytestring ==0.12.2.0
  default-language: Haskell2010
  default-extensions: OverloadedStrings, LambdaCase, QuasiQuotes
